@@ -135,6 +135,7 @@ struct mosquitto {
 #endif
 #ifdef WITH_THREADING
 	pthread_mutex_t callback_mutex;
+	pthread_mutex_t log_callback_mutex;
 	pthread_mutex_t msgtime_mutex;
 	pthread_mutex_t out_packet_mutex;
 	pthread_mutex_t current_out_packet_mutex;
@@ -155,14 +156,13 @@ struct mosquitto {
 	unsigned int message_retry;
 	time_t last_retry_check;
 	struct mosquitto_message_all *messages;
-	int log_priorities;
-	int log_destinations;
 	void (*on_connect)(struct mosquitto *, void *obj, int rc);
 	void (*on_disconnect)(struct mosquitto *, void *obj, int rc);
 	void (*on_publish)(struct mosquitto *, void *obj, uint16_t mid);
 	void (*on_message)(struct mosquitto *, void *obj, const struct mosquitto_message *message);
 	void (*on_subscribe)(struct mosquitto *, void *obj, uint16_t mid, int qos_count, const uint8_t *granted_qos);
 	void (*on_unsubscribe)(struct mosquitto *, void *obj, uint16_t mid);
+	void (*on_log)(struct mosquitto *, void *obj, int level, const char *str);
 	//void (*on_error)();
 	char *host;
 	int port;
