@@ -30,28 +30,33 @@
 import mosquitto
 
 def on_connect(mosq, obj, rc):
-        print("rc: "+str(rc))
+    print("rc: "+str(rc))
 
 def on_message(mosq, obj, msg):
-        print(msg.topic+" "+str(msg.qos)+" "+str(msg.payload))
+    print(msg.topic+" "+str(msg.qos)+" "+str(msg.payload))
 
 def on_publish(mosq, obj, mid):
-        print("mid: "+str(mid))
+    print("mid: "+str(mid))
 
 def on_subscribe(mosq, obj, mid, granted_qos):
-        print("Subscribed: "+str(mid)+" "+str(granted_qos))
-        
+    print("Subscribed: "+str(mid)+" "+str(granted_qos))
+
+def on_log(mosq, obj, level, string):
+    print(string)
 
 mqttc = mosquitto.Mosquitto("python_sub")
 mqttc.on_message = on_message
 mqttc.on_connect = on_connect
 mqttc.on_publish = on_publish
 mqttc.on_subscribe = on_subscribe
+# Uncomment to enable debug messages
+#mqttc.on_log = on_log
 mqttc.connect("127.0.0.1", 1883, 60)
 mqttc.subscribe("$SYS/#", 0)
 
+
 rc = 0
 while rc == 0:
-        rc = mqttc.loop()
+    rc = mqttc.loop()
 
 print("rc: "+str(rc))
